--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
     </p>
 
     <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">dounia-mal</a>.
+      Coded by <a href="#">dounia-mal</a>.
       </div>
     </div>
     </div>
